# Dreams-Eater

./: BulletComponent.cpp  BulletComponent.hpp  CMakeLists.txt  CharacterBuilder.cpp  CharacterBuilder.hpp  CharacterComponent.cpp  CharacterComponent.hpp  DoorComponent.cpp  DoorComponent.hpp  DreamGame.cpp  DreamGame.hpp  DreamInspector.cpp  DreamInspector.hpp  EnemyController.cpp  EnemyController.hpp  GameObject.cpp  GameObject.hpp  Level.cpp  Level.hpp  LevelBuilder.cpp  LevelBuilder.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PlayerController.cpp  PlayerController.hpp  README.md  RoomBuilder.cpp  RoomBuilder.hpp  RoomComponent.cpp  RoomComponent.hpp  Scene.cpp  Scene.hpp  SideScrollingCamera.cpp  SideScrollingCamera.hpp  SpriteAnimationComponent.cpp  SpriteAnimationComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  StartMenuComponent.hpp  main.cpp
Data/: enemies.json
Documentation/: ClassDiagram.mdj  UMLdiagram.mdj
Header/: CharacterType.hpp  Component.hpp  DreamGame.hpp  DreamInspector.hpp  GameObject.hpp  GuiHelper.hpp  Level.hpp  Powerup.hpp  Scene.hpp  State.hpp
Header/Builders/: CharacterBuilder.hpp  LevelBuilder.hpp  PowerupBuilder.hpp  RoomBuilder.hpp
Header/Components/: CharacterComponent.hpp  EndMenuComponent.hpp  IEnemyController.hpp  LevelGuiComponent.hpp  PauseMenuComponent.hpp  PhysicsComponent.hpp  PlayerController.hpp  PortalComponent.hpp  PowerupComponent.hpp  RoomComponent.hpp  SideScrollingCamera.hpp  SpriteAnimationComponent.hpp  SpriteComponent.hpp  StartMenuComponent.hpp
Header/EnemyBehaviours/: BigTroll.hpp  SimpleMelee.hpp  SimpleRanged.hpp  Witch.hpp  Wizard.hpp
Sprites/: animationSizes.json  change_names.py  change_pivot.py  create_json_dimensions.py  flipImages.py  resize_image.py
Sprites/PickUp/: PickUp_atlas.json
Sprites/Room/: Roof_atlas.json  (+3 more)
Src/: Component.cpp  DreamGame.cpp  DreamInspector.cpp  GameObject.cpp  GuiHelper.cpp  Level.cpp  Scene.cpp  main.cpp
(+55 files in other folders)
